--- a/src/pagecss/servicios.module.css
+++ b/src/pagecss/servicios.module.css
@@ -94,4 +94,10 @@
     align-items: center;
     justify-content: center;
 }
+.imgPuntoVenta img {
+    border-radius: 1rem;
+    margin: 0.5rem;
+    max-width: 400px;
+    min-height: 300px;
+}
 
