--- a/src/pagecss/pie.module.css
+++ b/src/pagecss/pie.module.css
@@ -20,46 +20,7 @@
     background:#222D3A;
     
 }
-/*
-.footer {
-    position: fixed;
-    bottom: 0px;
-    width: 700px;
-    height: 260px;
-    background-color: var(--color12);
-    border-radius: 10px 10px 0 0;
-    color: #0f1819;
-   
-    
+.empresalogo img{
+    margin: 20px ;
+    height: 80px;
 }
-.footer.footer2{
-    position: fixed;
-    bottom: -210px;
-}
-.footer  .cabesa{ 
-    position: absolute;
-    border: 1px solid #0f1819;
-    width: 100%;
-    height: 50px;
-    color: #0f1819;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: space-between
-    
-}
-.footer  .cabesa h5{
-    font-size: 15px;
-    color: #0f1819;
-    margin:20px ;
-}
-#whatsap {
-    font-size: 40px;
-    height: 40px;
-    position: relative;
-    float: right;
-    margin: 20px;
-}
-.cabesa {
-    cursor: pointer;
-}*/
